# pytorch_timeseries

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTE.md  README.md  leaderboard.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: leaderboard.yml  tests.yml
docs/: CHANGELOG.md  Makefile  architecture-roadmap.md  changelog.rst  conf.py  index.rst  requirements.txt
docs/adr/: 0001-v2-datamodules-are-canonical.md  0002-separate-experiment-engine-task-and-model-contracts.md  0003-named-batches-are-canonical.md  0004-results-and-benchmark-reports-are-separate-boundaries.md  0005-irregular-tasks-are-a-parallel-family.md  0006-preserve-public-experiment-names-with-compatibility-shims.md  0007-task-configuration-is-formal-and-validated.md  0008-model-configuration-is-formal-and-model-owned.md  0009-experiment-configuration-is-strictly-validated.md
docs/concepts/: architecture.rst  dataloader.rst  experiments.rst  results-and-artifacts.rst
docs/contribute/: quick-contribute.rst
docs/extensions/: ext.py
docs/get-started/: quickstart.rst
docs/install/: install.rst
docs/leaderboard/: index.md  index.rst
docs/modules/: augment.rst  dataloader.rst  dataset.rst  metrics.rst  model.rst  nn.rst  scaler.rst
examples/: anomaly.py  dlinear.py  dlinearcli.py  mask.py  quickstart.py  ueaclass.py  v2_forecast_smoke.py
leaderboard/: build_leaderboard.py  serve_leaderboard.py
results/: DLinear_Forecast_ETTh1_seed1.json  _GridModel_Forecast_ETTh1_seed1.json  _GridModel_Forecast_ETTh1_seed2.json  _GridModel_Forecast_ETTm1_seed1.json  _GridModel_Forecast_ETTm1_seed2.json
run_scripts/: classification.sh  mv_baseline.sh  mv_baseline_3e_3s.sh  run_wandb.sh  sg_baseline.sh  sg_baseline192.sh  sg_baseline_3e_3s.sh
scripts/: build_leaderboard.py  serve_leaderboard.py
tests/: test_cli_and_registry.py  test_experiment_builder.py  test_forecaster.py  test_model_aftforecaster.py  test_model_conformerforecaster.py  test_model_difftransformerforecaster.py  test_model_echostateforecaster.py  test_model_fastformerforecaster.py  test_model_flowts.py  test_model_gatedmlpforecaster.py  test_model_glaforecaster.py  test_model_hgrn2forecaster.py  test_model_hyenaforecaster.py  test_model_implicitneuralforecaster.py  test_model_liquidnetforecaster.py  test_model_lruforecaster.py  test_model_megaforecaster.py  test_model_mingruforecaster.py  test_model_multiscaleconvforecaster.py  test_model_neuralbasisforecaster.py  test_model_nystromforecaster.py  test_model_prototypicalforecaster.py  test_model_qrnnforecaster.py  test_model_rwkvforecaster.py  test_model_s4forecaster.py  test_model_sincnetforecaster.py  test_model_spikeforecaster.py  test_model_tsflowforecaster.py  test_model_xlstmforecaster.py  test_scalers.py  test_schedulers.py  test_utils.py
torch-timeseries/: meta.yaml
torch_timeseries/: __init__.py  experiment.py  forecaster.py
webapp/: README.md  index.html  package-lock.json  tsconfig.json  vite.config.ts
(+867 files in other folders)
