[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[project]
dynamic = ["version"]
requires-python = ">= 3.8"
name = "torch-timeseries"
description = "Timeseries Learning Library for PyTorch."
authors = [{ name = "Wayne Yip", email = "wwye155@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["deep Learning", "time series", "pytorch"]
dependencies = [
    "numpy",
    "pandas",
    "sktime",
    "pandas>=0.29.0",
    "scikit-learn",
    "tqdm",
    "einops",
    "prettytable",
    "torchmetrics==1.1.1",
    "fire>=0.5.0"
]

[project.scripts]
pytexp = "torch_timeseries:exp"


[project.urls]
Documentation = "https://pytorch-timeseries.readthedocs.io"
BugTracker = "https://github.com/wayne155/pytorch_timeseries/issues"


[project.optional-dependencies]
g = ["pyg"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39']
