[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[project]
dynamic = ["version"]
requires-python = ">= 3.8"
name = "torch-timeseries"
description = "Timeseries Learning Library for PyTorch."
authors = [{ name = "Wayne Yip", email = "wwye155@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["deep Learning", "time series", "pytorch"]
dependencies = [
    "numpy",
    "pandas",
    "torch",
    "sktime>=0.29.0",
    "scikit-learn",
    "tqdm",
    "einops",
    "prettytable",
    "torchmetrics>=1.1.1",
    "fire>=0.5.0",
    "PyYAML",
]

[project.scripts]
pytexp = "torch_timeseries:exp"


[project.urls]
Documentation = "https://pytorch-timeseries.readthedocs.io"
BugTracker = "https://github.com/wayne155/pytorch_timeseries/issues"


[project.optional-dependencies]
g = ["pyg"]
test = ["pytest"]
dev = ["pytest", "pre-commit"]
irregular = [
    "torchdiffeq>=0.2.3",
    "torchcde>=0.2.5",
    "torch_geometric>=2.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39']

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "slow: integration tests that download data from the network",
]
